# Todo-App-Evolution

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.spec-kit/: config.yaml
.spec-kit/skills/: spec-gen.md
Phases/Phase1/: README.md  constitution.md  main.py  models.py
Phases/Phase1-Complete/: PHASE0_COMPLETE.md  cli.py  service.py
Phases/Phase1-Complete/.spec-kit/skills/: test-gen.md
Phases/Phase1-Complete/.spec-kit/templates/: spec-template.md
Phases/Phase1-Complete/specs/: overview.md
Phases/Phase1-Complete/specs/architecture/: phase1-architecture.md
Phases/Phase1-Complete/tests/: test_service.py
Phases/Phase1/.spec-kit/skills/: architect.md
Phases/Phase1/specs/features/: add-task.md  mark-complete.md  update-task.md  view-tasks.md
Phases/Phase2/: CLAUDE.md
Phases/Phase2/backend/: .env.example  CLAUDE.md  create_better_auth_tables.py  pyproject.toml  requirements.txt
Phases/Phase2/backend/src/: auth.py  config.py  database.py  main.py
Phases/Phase2/backend/src/api/: __init__.py  tasks.py
Phases/Phase2/backend/src/models/: __init__.py  task.py
Phases/Phase2/backend/src/services/: __init__.py  task_service.py
Phases/Phase2/frontend/: .env.example  package-lock.json  package.json
Phases/Phase2/specs/: overview.md
Phases/Phase2/specs/api/: rest-endpoints.md
Phases/Phase2/specs/database/: schema.md
Phases/Phase2/specs/ui/: pages.md
Phases/Phase3/.spec-kit/: config.yaml
Phases/Phase3/backend/: .gitignore  add_reminder_columns.py  check_reminders.py  debug_add_task.py  pyproject.toml  requirements.txt
Phases/Phase3/backend/src/: __init__.py  config.py  database.py  main.py
Phases/Phase3/frontend/: .env.example  CLAUDE.md  README.md  next.config.mjs  package-lock.json  package.json  vercel.json
Phases/Phase3/frontend/public/: ICONS_README.md  manifest.json
Phases/Phase3/specs/: overview.md
specs/architecture/: phase2-architecture.md
specs/features/: delete-task.md
src/: cli.py  database.py  main.py  models.py  repository.py  service.py
tests/: conftest.py  test_models.py  test_repository.py
(+57 files in other folders)
